# ayla-zigbee-sdk

./: .reviewboardrc  DOCKER BUILD CREATION AND RUN FOR THE GDNT-R SDK (1).docx  Makefile  README.md
device_linux_gw_public/: Makefile  README  gateway.mk  package_version.mk
device_linux_gw_public/app/appd/: Makefile  appd.c  appd.h  main.c
device_linux_gw_public/app/bt_gatewayd/: Makefile  bt_interface.c  bt_interface.h  dbus_client.h  dbus_utils.h  gateway.c  gateway.h
device_linux_gw_public/app/gatewayd/: Makefile  gateway.c  main.c  node.h  node_sim.c  node_sim.h
device_linux_gw_public/app/gatewayd_fxa/: Makefile  gateway.c  node.h
device_linux_gw_public/app/kvsd/: Makefile  check.h  gateway.c  gateway.h  kvs_gw.csv  kvs_gw.md  kvs_node_base.csv  kvs_node_base.md  kvs_node_camera.csv  kvs_node_camera.md  node.c  node_camera.c  node_camera.h  node_sim.c  utils.c  utils.h  video_stream.c  video_stream.h
device_linux_gw_public/app/multi_gatewayd/: .style_ok  Makefile  gateway.c  main.c
device_linux_gw_public/app/zb_gatewayd/: .style_ok  Makefile  appd_interface.c  appd_interface.h  appd_interface_node.h  ember_stack_include.h  gateway.c  gateway.h  main.c  node.c  node.h  speedtest.c  speedtest.h  zb_callback.c  zb_interface.c  zb_interface.h
device_linux_gw_public/daemon/cond/: .style_ok  Makefile  cond.c  cond.h  wifi.c  wifi.h  wifi_conf.c  wifi_interface.c  wifi_platform.h  wifi_utils.c
device_linux_gw_public/daemon/devd/: Makefile  app_if.c  app_if.h  client_lan.c  dapi.c  dapi.h  devd_conf.c  devd_conf.h  dnss.c  dnss.h  ds.h  ds_client.c  ds_client.h  ds_main.c  gateway.exclude  gateway.mk  gateway_client.c  gateway_client.h  gateway_if.c  gateway_if.h  msg_server.c  msg_server.h  notify.c  notify.h  ops_devd.c  ops_devd.h  props_client.c  props_client.h  props_if.c  props_if.h  serv.c  serv.h  video_stream_ds.c  video_stream_ds.h  vt_node_list.c  vt_node_list.h
device_linux_gw_public/daemon/logd/: Makefile  logd.c  logd.h
device_linux_gw_public/dev_kit/raspberry_pi/: ayla_install.sh
device_linux_gw_public/host_util/config_gen/: Makefile  README  conf_gen_main.c  xml.c  xml.h  xml_decode.c
device_linux_gw_public/host_util/gw_setup/: COPYING.txt  Makefile  ayla_lib.tcl  gw_setup.tcl
device_linux_gw_public/lib/app/: Makefile  app.c  conf_access.c  data.c  data_internal.h  gateway.c  gateway.mk  gateway_internal.h  msg_client.c  msg_client_internal.h  ops.c  ops_internal.h  props.c  props_internal.h  sched.c  sched_internal.h  schedeval.c
device_linux_gw_public/lib/ayla/: .style_ok  Makefile  amsg.c  amsg_protocol.c  assert.c  async.c  base64.c  buffer.c  clock_utils.c  cmd_handle.c  conf_io.c  conf_rom.c  crc16.c  crc32.c  crc8.c  crypto.c  endian.c  file_event.c  file_io.c  filesystem_monitor.c  gateway.mk  gateway_interface.c  hex.c  http.c  http_client.c  json_interface.c  json_parser.c  lan_ota.c  log.c  lookup_by_name.c  lookup_by_val.c  msg_cli.c  msg_conf.c  msg_utils.c  network_utils.c  parse_argv.c  serv_proxy.c  server.c  socket.c  str_utils.c  (+5 more)
device_linux_gw_public/make/: README  common_cc.mk  common_defs.mk
files/: Ayla_Sanity_Script_V1.sh  Ayla_Sanity_Script_V2.sh  apply_new_ota.sh  apply_ota.sh  attributes.conf  ayla-tch-src  ayla.init  cdc-acm.ko  dcm_props  decision_tree.sh  devd_config.sh  get_stainfo.sh  get_sysinfo.sh  gw_schedule_reboot.sh  kvs_streaming_rtsp.sh  ota_sysupgrade.sh  radio_fw_version.conf
files/docroot/: wifi.js
firmware/: Ayla_NCP_TBS2.s37
kvsd_apps/: README.md  cmake_c_flags.cmake  cmake_includes.cmake  cmake_library_path.cmake  cmake_toolchain_flags.cmake  kvs-webrtc-gst-pipeline-change-for-rpi.diff  kvs-webrtc-slave.diff  kvsd_build_apps.sh  kvsd_clean.sh  staging_dir.path
kvsd_apps/amazon-kinesis-video-streams-producer-sdk-cpp/: CMakeLists.txt  GIT_COMMIT.md
kvsd_apps/amazon-kinesis-video-streams-webrtc-sdk-c/: CMakeLists.txt  GIT_COMMIT.md
kvsd_apps/kvsd_stream_hls/: CMakeLists.txt  main.c
kvsd_apps/kvsd_stream_master/: CMakeLists.txt  main.c  stream_comm.h
libopkg/: Makefile  cmake_install.cmake
v2.7/: .properties  README
v3.2/meta/: modules.yaml
v3.2/platform/: release-highlights.txt
(+4979 files in other folders)
